--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "deep-research-lab",
   "version": "0.1.0",
-  "description": "TypeScript implementation of DeepSearch system with plugin architecture",
   "private": true,
+  "description": "TypeScript implementation of DeepSearch system with plugin architecture",
   "main": "dist/main.js",
   "workspaces": [
     "src/*"
@@ -10,12 +10,28 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "ts-node src/main.ts",
+    "dev": "ts-node-dev --respawn src/main.ts",
     "example": "ts-node -r tsconfig-paths/register src/examples/simple-example.ts",
     "execution-example": "ts-node -r tsconfig-paths/register src/examples/execution-example.ts",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "clean": "rimraf dist"
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "clean": "rimraf dist",
+    "prepare": "husky install",
+    "commit": "git-cz",
+    "dev:commit": "pnpm run lint:fix && pnpm run format && git add . && pnpm run commit"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@nestjs/common": "^11.0.11",
@@ -27,26 +43,28 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.3",
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
+    "@types/node": "^20.12.1",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "^8.38.0",
-    "jest": "^29.5.0",
-    "rimraf": "^5.0.0",
-    "ts-jest": "^29.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.5.3",
+    "rimraf": "^5.0.10",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.2"
-  },
-  "keywords": [
-    "deep-search",
-    "typescript",
-    "plugin-system",
-    "workflow-engine",
-    "rxjs"
-  ],
-  "author": "",
-  "license": "MIT"
+    "typescript": "^5.1.6",
+    "typescript-eslint": "^8.26.0"
+  }
 }
