--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "deep-research-lab",
+  "name": "delab",
   "version": "0.1.0",
   "private": true,
   "description": "TypeScript implementation of DeepSearch system with plugin architecture",
   "main": "dist/main.js",
+  "type": "module",
   "workspaces": [
-    "src/*"
+    "packages/src/*",
+    "app"
   ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/main.js",
-    "dev": "ts-node-dev --respawn src/main.ts",
+    "prebuild": "rimraf dist",
+    "build": "tsc && babel dist --out-dir dist --extensions '.js'",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "example": "ts-node -r tsconfig-paths/register src/examples/simple-example.ts",
     "execution-example": "ts-node -r tsconfig-paths/register src/examples/execution-example.ts",
     "test": "jest",
-    "lint": "eslint \"src/**/*.ts\"",
-    "lint:fix": "eslint \"src/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint \"packages/src/**/*.ts\" --config eslint.config.js",
+    "lint:fix": "eslint \"packages/src/**/*.ts\"  --config eslint.config.js --fix",
+    "format": "prettier --write \"packages/src/**/*.ts\"",
+    "dev:commit": "pnpm run lint:fix && pnpm run format && git add . && pnpm run commit",
     "clean": "rimraf dist",
     "prepare": "husky install",
-    "commit": "git-cz",
-    "dev:commit": "pnpm run lint:fix && pnpm run format && git add . && pnpm run commit"
+    "commit": "git-cz"
   },
   "config": {
     "commitizen": {
@@ -34,37 +39,46 @@
     ]
   },
   "dependencies": {
+    "@nestjs/cli": "^11.0.5",
     "@nestjs/common": "^11.0.11",
     "@nestjs/core": "^11.0.11",
+    "@nestjs/platform-express": "^11.0.11",
     "axios": "^1.6.0",
     "jsonschema": "^1.4.1",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.3",
+    "@eslint/js": "^9.22.0",
+    "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.12.1",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.5.3",
     "rimraf": "^5.0.10",
     "ts-jest": "^29.2.6",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.26.0"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
