--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,23 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "noImplicitAny": false,
     "module": "commonjs",
     "lib": ["ES2020"],
+    "removeComments": true,
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    // "rootDir": "packages",
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
   },
-  "include": ["src/**/*"],
+  "include": ["packages/**/*"],
   "exclude": ["node_modules", "dist", "tests"],
-  "extends": "./tsconfig.project.json"
+  "extends": "./tsconfig.paths.json"
 }
