refactor: add nest.js

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@delab/app",
+    "name": "@packages/app",
     "version": "0.0.1",
     "main": "index.js",
     "types": "index.d.ts"
